--- a/Weather App/src/components/Weather.css
+++ b/Weather App/src/components/Weather.css
@@ -30,3 +30,37 @@
     cursor: pointer;
     
 }
+.weather-icon{
+    width: 150px;
+    margin: 30px 0;
+}
+.temperature{
+    color: #fff;
+    font-size: 80px;
+    line-height: 1;
+}
+.location{
+    color: #fff;
+    font-size: 40px;
+}
+.weather-data{
+    width: 100;
+    margin-top: 40px;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+}
+.weather-data .col{
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    font-size: 22px;
+}
+.weather-data .col span{
+    display: block;
+    font-size: 17px;
+}
+.weather-data .col img{
+    width: 27px;
+    margin-top: 10px;
+}
